--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 	"name": "Quick find list item",
 	"description": "Quick find item in an HTML select element (drop-down lists and list boxes).",
-	"version": "1.0.0",
+	"version": "1.0.2",
 	"background": {
 		"scripts": [
 			"js/background.js"
@@ -39,9 +39,7 @@
 	},
 	"permissions": [
 		"contextMenus",
-		"tabs",
-		"http://*/*",
-		"https://*/*"
+		"activeTab"
 	],
 	"update_url": "http://clients2.google.com/service/update2/crx"
 }
